removed direction (#9088)
* removed direction

* added missing files
