# specification/impact/resource-manager/Microsoft.Impact/cadl/cadl-output/generated/models/RootCauseAttributions.cs
@@ -1,47 +1,0 @@
-// Copyright (c) Microsoft Corporation. All rights reserved.
-// Licensed under the MIT License.
-
-// <auto-generated />
-
-using System;
-using System.Collections.Generic;
-using Newtonsoft.Json;
-using Microsoft.Cadl.ProviderHub.Controller;
-
-namespace Microsoft.Impact.Service.Models
-{
-    /// <summary>
-    /// A Contact resource
-    /// </summary>
-    public partial class RootCauseAttributions : ProxyResource
-    {
-
-        /// <summary>
-        /// Extensibility point - allows changing class properties during construction.
-        /// </summary>
-        partial void OnBeforeInitialize();
-
-        /// <summary>
-        /// Extensibility point - allows changing class properties during construction.
-        /// </summary>
-        partial void OnAfterInitialize();
-
-        /// <summary>
-        /// Initializes a new instance of the RootCauseAttributions class.
-        /// </summary>
-        public RootCauseAttributions()
-        {
-            OnBeforeInitialize();
-            OnAfterInitialize();
-        }
-
-        /// <summary>
-        /// The resource-specific properties for this resource.
-        /// </summary>
-        [JsonProperty("properties")]
-        public RootCauseAttributionsProperties Properties { get; set; }
-
-
-
-    }
-}
