# specification/impact/resource-manager/Microsoft.Impact/cadl/cadl-output/generated/models/RootCauseAttributionsPropertiesExtensions.cs
@@ -1,39 +1,0 @@
-// Copyright (c) Microsoft Corporation. All rights reserved.
-// Licensed under the MIT License.
-
-// <auto-generated />
-
-using System;
-using System.ComponentModel;
-using System.Runtime.Serialization;
-using Newtonsoft.Json;
-using Microsoft.Cadl.ProviderHub.Controller;
-
-namespace Microsoft.Impact.Service.Models
-{
-    /// <summary>
-    /// Extensions for easy PUT and PATCH copying of a resource
-    /// </summary>
-    public static class RootCauseAttributionsPropertiesExtensions
-    {
-        /// <summary>
-        /// Copy the properties of this RootCauseAttributionsProperties to another RootCauseAttributionsProperties
-        /// </summary>
-        /// <param name="source">The source RootCauseAttributionsProperties</param>
-        /// <param name="target">The target RootCauseAttributionsProperties</param>
-        /// <param name="copySettings">The kind of copy you would like to perform (using PUT or PATCH semantics)</param>
-        public static void CopyTo(this RootCauseAttributionsProperties source, RootCauseAttributionsProperties target, CopySettings copySettings = CopySettings.UsePutSemantics)
-        {
-            var helper = new RootCauseAttributionsPropertiesCopyHelper();
-            switch (copySettings)
-            {
-                case CopySettings.UsePatchSemantics:
-                    helper.CopyForPatch(source, target);
-                    break;
-                case CopySettings.UsePutSemantics:
-                    helper.CopyForPut(source, target);
-                    break;
-            }
-        }
-    }
-}
