# specification/impact/resource-manager/Microsoft.Impact/cadl/cadl-output/generated/models/WorkloadimpactsUpdateExtensions.cs
@@ -1,39 +1,0 @@
-// Copyright (c) Microsoft Corporation. All rights reserved.
-// Licensed under the MIT License.
-
-// <auto-generated />
-
-using System;
-using System.ComponentModel;
-using System.Runtime.Serialization;
-using Newtonsoft.Json;
-using Microsoft.Cadl.ProviderHub.Controller;
-
-namespace Microsoft.Impact.Service.Models
-{
-    /// <summary>
-    /// Extensions for easy PUT and PATCH copying of a resource
-    /// </summary>
-    public static class WorkloadimpactsUpdateExtensions
-    {
-        /// <summary>
-        /// Copy the properties of this WorkloadimpactsUpdate to another WorkloadimpactsUpdate
-        /// </summary>
-        /// <param name="source">The source WorkloadimpactsUpdate</param>
-        /// <param name="target">The target WorkloadimpactsUpdate</param>
-        /// <param name="copySettings">The kind of copy you would like to perform (using PUT or PATCH semantics)</param>
-        public static void CopyTo(this WorkloadimpactsUpdate source, WorkloadimpactsUpdate target, CopySettings copySettings = CopySettings.UsePutSemantics)
-        {
-            var helper = new WorkloadimpactsUpdateCopyHelper();
-            switch (copySettings)
-            {
-                case CopySettings.UsePatchSemantics:
-                    helper.CopyForPatch(source, target);
-                    break;
-                case CopySettings.UsePutSemantics:
-                    helper.CopyForPut(source, target);
-                    break;
-            }
-        }
-    }
-}
