# specification/impact/resource-manager/Microsoft.Impact/cadl/cadl-output/generated/models/WorkloadimpactsUpdatePropertiesExtensions.cs
@@ -1,39 +1,0 @@
-// Copyright (c) Microsoft Corporation. All rights reserved.
-// Licensed under the MIT License.
-
-// <auto-generated />
-
-using System;
-using System.ComponentModel;
-using System.Runtime.Serialization;
-using Newtonsoft.Json;
-using Microsoft.Cadl.ProviderHub.Controller;
-
-namespace Microsoft.Impact.Service.Models
-{
-    /// <summary>
-    /// Extensions for easy PUT and PATCH copying of a resource
-    /// </summary>
-    public static class WorkloadimpactsUpdatePropertiesExtensions
-    {
-        /// <summary>
-        /// Copy the properties of this WorkloadimpactsUpdateProperties to another WorkloadimpactsUpdateProperties
-        /// </summary>
-        /// <param name="source">The source WorkloadimpactsUpdateProperties</param>
-        /// <param name="target">The target WorkloadimpactsUpdateProperties</param>
-        /// <param name="copySettings">The kind of copy you would like to perform (using PUT or PATCH semantics)</param>
-        public static void CopyTo(this WorkloadimpactsUpdateProperties source, WorkloadimpactsUpdateProperties target, CopySettings copySettings = CopySettings.UsePutSemantics)
-        {
-            var helper = new WorkloadimpactsUpdatePropertiesCopyHelper();
-            switch (copySettings)
-            {
-                case CopySettings.UsePatchSemantics:
-                    helper.CopyForPatch(source, target);
-                    break;
-                case CopySettings.UsePutSemantics:
-                    helper.CopyForPut(source, target);
-                    break;
-            }
-        }
-    }
-}
